# binman

./: .gitignore  Cargo.toml  LICENSE  Lease.toml  Makefile  README.md  release.toml
.github/: dependabot.yml
.github/workflows/: release.yml  test.yml
src/: error.rs  main.rs
src/binlib/: config.rs  fuzzy_semver.rs  install.rs  lib.rs  state.rs  uninstall.rs  update.rs  zip.rs
src/binlib/github/: asset.rs  client.rs  mod.rs  release.rs  repository.rs
src/binman/: config.rs  fuzzy_semver.rs  install.rs  mod.rs  state.rs  uninstall.rs  update.rs  zip.rs
src/cli/: install.rs  list.rs  main.rs  mod.rs  uninstall.rs  update.rs
src/github/: asset.rs  client.rs  release.rs  repository.rs
