[package]
name = "binman"
version = "0.5.0"
authors = ["William Dussault <william@dussault.dev>"]
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "binlib"
path = "src/binlib/lib.rs"

[[bin]]
name = "binman"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = {version = "3.2.17", features = ["derive"]}
dirs = "4.0.0"
http = "0.2.8"
rood = "0.5.1"
regex = "1.5.4"
reqwest = { version = "0.11", features = ["json"]}
semver = { version = "1.0.14", features = ["serde"] }
serde = { version = "1.0.143", features = ["derive"] }
serde_json = "1.0.86"
sha2 = "0.10.2"
shellexpand = "2.1.2"
tempfile = "3.3.0"
tokio = { version = "1.6", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
walkdir = "2"
